--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 # Project-specific settings
 model.csv
 
+# VS Code settings
+.vscode/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
