Add preview image and subject in the README

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ model.csv
 # VS Code settings
 .vscode/
 
+# OS-specific files
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -176,5 +179,3 @@ poetry.toml
 
 # LSP config files
 pyrightconfig.json
-
-# End of https://www.toptal.com/developers/gitignore/api/python
